RESOLVED FIXED303241
[blocks-in-inline] Fix fast/block/inside-inlines/self-collapsing-test.html
https://bugs.webkit.org/show_bug.cgi?id=303241
Summary [blocks-in-inline] Fix fast/block/inside-inlines/self-collapsing-test.html
alan
Reported 2025-11-28 11:00:20 PST
ssia
Attachments
Patch (8.04 KB, patch)
2025-11-28 11:03 PST, alan
no flags
[fast-cq]Patch (6.82 KB, patch)
2025-11-28 14:19 PST, alan
no flags
alan
Comment 1 2025-11-28 11:03:36 PST
Antti Koivisto
Comment 2 2025-11-28 11:57:01 PST
Comment on attachment 477556 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=477556&action=review > Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:829 > + size_t inlineLineCount = 0; > + for (auto& line : m_inlineContent->displayContent().lines) > + inlineLineCount += line.hasInlineContent() ? 1 : 0; > + return inlineLineCount; We could have a separate path for hasLines() as it does not actually need to count. Or we could cashe the count in InlineContent.
alan
Comment 3 2025-11-28 14:19:57 PST
Created attachment 477557 [details] [fast-cq]Patch
EWS
Comment 4 2025-11-29 05:11:02 PST
Committed 303638@main (866bcf54491a): <https://commits.webkit.org/303638@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477557 [details].
Radar WebKit Bug Importer
Comment 5 2025-11-29 05:12:12 PST
Note You need to log in before you can comment on or make changes to this bug.