[blocks-in-inline] Fix fast/block/inside-inlines/self-collapsing-test.html https://bugs.webkit.org/show_bug.cgi?id=303241

Reviewed by Antti Koivisto.

RenderBlockFlow's childrenPreventSelfCollapsing can't simply check for "line count" anymore
with [blocks-in-inline] as with block level boxes, we've got to look and figure out what's inside those blocks.

Test: fast/inline/blocks-in-inline-self-collapsing-block-with-margin2.html

* LayoutTests/fast/inline/blocks-in-inline-self-collapsing-block-with-margin2-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-self-collapsing-block-with-margin2.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLine.h:
(WebCore::InlineDisplay::Line::hasInlineContent const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::isSelfCollapsingContent const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::childrenPreventSelfCollapsing const):

Canonical link: https://commits.webkit.org/303638@main